JC: clean up and refecotring views. spec does not pass for new/create (form_tag).

--- a/app/views/requisition_checkoutx/checkouts/_form_list.html.erb
+++ b/app/views/requisition_checkoutx/checkouts/_form_list.html.erb
@@ -10,7 +10,7 @@
 			<th><%= t('Checkout Date') %></th>
 			<th><%= t('Item Name') %></th>
 			<th><%= t('Spec') %></th>
-			<th><%= t('Requested Qty/Unit') %></th>
+			<th><%= t('Requisition Qty/Unit') %></th>
 			<th><%= t('Out Qty/Unit') %></th>				
 			<th><%= t('Checkout By') %></th>
 			<th><%= t('Last Updated By') %></th>
